<resources>
    <string name="app_name">HugoAppTest</string>

    <string name="fragment_home_register_new_access">Registrar entrada</string>
    <string name="fragment_home_register_exit">Registrar salida</string>
    <string name="fragment_home_register_new_car_register">Dar de alta vehículo</string>
    <string name="fragment_home_start_month">Comenzar mes</string>
    <string name="fragment_home_resident_payment">Pago de residentes</string>

    <!-- Register access -->
    <string name="fragment_sheet_register_access_title">Registrar nuevo acceso</string>
    <string name="fragment_sheet_register_access_number">Número de placa</string>
    <string name="fragment_sheet_register_access_time">Fecha y hora de ingreso</string>
    <string name="fragment_sheet_register_access_button">Aceptar</string>

    <!-- Register Exit -->
    <string name="fragment_sheet_register_exit_title">Registrar salida</string>
    <string name="fragment_sheet_register_exit_time">Fecha y hora de salida</string>

    <!-- New Car Register -->
    <string name="fragment_new_car_register_title">Registrar nuevo vehículo</string>
    <string name="fragment_new_car_register_number">Número de placa</string>
    <string name="fragment_new_car_register_time">Fecha y hora de ingreso</string>
    <string name="fragment_new_car_register_button">Guardar</string>
    <string name="fragment_new_car_register_description">Agregar breve descripción (Opcional)</string>
    <string name="fragment_new_car_register_tools_description">Short description \n Short description \nShort description \nShort Description</string>

    <!-- Car type selection -->
    <string name="option_car_type_oficial">Vehículo oficial</string>
    <string name="option_car_type_resident">Vehículo residente</string>
    <string name="option_car_type_not_resident">Vehículo NO residente</string>

    <string-array name="list_car_type">
        <item>@string/option_car_type_oficial</item>
        <item>@string/option_car_type_resident</item>
        <item>@string/option_car_type_not_resident</item>
    </string-array>

</resources>