<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_register_new_access"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fragment_home_register_new_access" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_register_exit"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_register_new_access"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView_register_new_access"
            app:layout_constraintTop_toBottomOf="@+id/cardView_register_new_access">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fragment_home_register_exit" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_car_register"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_register_exit"
            app:layout_constraintStart_toStartOf="@+id/cardView_register_exit"
            app:layout_constraintTop_toBottomOf="@+id/cardView_register_exit">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fragment_home_register_new_car_register" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_start_month"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_car_register"
            app:layout_constraintStart_toStartOf="@+id/cardView_car_register"
            app:layout_constraintTop_toBottomOf="@+id/cardView_car_register">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fragment_home_start_month" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_resident_payment"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_start_month"
            app:layout_constraintStart_toStartOf="@+id/cardView_start_month"
            app:layout_constraintTop_toBottomOf="@+id/cardView_start_month">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/fragment_home_resident_payment" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>