<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.exam.hugoapptest.flow.home.viewModel.RegisterNewCarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_title_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_new_car_register_title"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/base_empty_view_divisor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            style="@style/Base_Button"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="@{ viewModel.isButtonRegisterEnable }"
            android:onClick="@{ () -> viewModel.saveNewCarRegister() }"
            android:text="@string/fragment_new_car_register_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:enabled="false" />

        <Spinner
            android:id="@+id/spinner_car_type"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/list_car_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_divider" />

        <EditText
            android:id="@+id/editText_number"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/fragment_sheet_register_access_number"
            android:inputType="textAutoComplete"
            android:text="@={ viewModel.carRegistrationNumber }"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/spinner_car_type"
            app:layout_constraintStart_toStartOf="@+id/spinner_car_type"
            app:layout_constraintTop_toBottomOf="@+id/spinner_car_type"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center|left"
            android:hint="@string/fragment_new_car_register_description"
            android:maxLines="3"
            android:text="@={ viewModel.carDescription }"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/editText_number"
            app:layout_constraintStart_toStartOf="@+id/editText_number"
            app:layout_constraintTop_toBottomOf="@+id/editText_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>